Add surface filtering for Q3

--- a/script/A2_run_patch_detector.ipynb
+++ b/script/A2_run_patch_detector.ipynb
@@ -56,8 +56,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "0: 480x640 4 medium_boxs, 19 small_boxs, 161.8ms\n",
-      "Speed: 2.8ms preprocess, 161.8ms inference, 1.2ms postprocess per image at shape (1, 3, 480, 640)\n"
+      "0: 480x640 4 medium_boxs, 19 small_boxs, 140.1ms\n",
+      "Speed: 1.0ms preprocess, 140.1ms inference, 0.7ms postprocess per image at shape (1, 3, 480, 640)\n"
      ]
     },
     {
@@ -144,11 +144,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.07500828724583525x + 0.036598833688455255y + 0.9965110547390285z + -1.5973109298791586 = 0\n",
       "\n",
       " Detection 0 (class: small_box) - found 2 planar patches\n",
-      "   └─ Patch 0: normal=[  -0.058676    0.012597     -0.9982], alignment_score=0.650, inliers=4\n",
-      "   └─ Patch 1: normal=[    0.88819     0.12863     -0.4411], alignment_score=1.064, inliers=0\n",
+      "   - Patch 0: normal=[  -0.058676    0.012597     -0.9982], alignment_score=0.650, inliers=4\n",
+      "   - Patch 1: normal=[    0.88819     0.12863     -0.4411], alignment_score=1.064, inliers=0\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -166,11 +165,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.06368419552239508x + 0.14893382334386276y + 0.9867943248239951z + -1.6090640970644812 = 0\n",
       "\n",
       " Detection 1 (class: small_box) - found 2 planar patches\n",
-      "   └─ Patch 0: normal=[    0.50096   -0.099096    -0.85978], alignment_score=0.338, inliers=3\n",
-      "   └─ Patch 1: normal=[  -0.022768       -0.37    -0.92875], alignment_score=0.922, inliers=2\n",
+      "   - Patch 0: normal=[    0.50096   -0.099096    -0.85978], alignment_score=0.338, inliers=3\n",
+      "   - Patch 1: normal=[  -0.022768       -0.37    -0.92875], alignment_score=0.922, inliers=2\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -188,13 +186,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.058767345193673416x + 0.04586560753486042y + 0.9972175014430632z + -1.5860665350388876 = 0\n",
       "\n",
       " Detection 2 (class: small_box) - found 4 planar patches\n",
-      "   └─ Patch 0: normal=[   -0.23718     0.77502    -0.58574], alignment_score=0.509, inliers=0\n",
-      "   └─ Patch 1: normal=[    0.90742 -0.00016927    -0.42023], alignment_score=0.814, inliers=3\n",
-      "   └─ Patch 2: normal=[    0.42331   -0.041394    -0.90504], alignment_score=0.340, inliers=2\n",
-      "   └─ Patch 3: normal=[   -0.11066   -0.013242    -0.99377], alignment_score=0.705, inliers=1\n",
+      "   - Patch 0: normal=[   -0.23718     0.77502    -0.58574], alignment_score=0.509, inliers=0\n",
+      "   - Patch 1: normal=[    0.90742 -0.00016927    -0.42023], alignment_score=0.814, inliers=3\n",
+      "   - Patch 2: normal=[    0.42331   -0.041394    -0.90504], alignment_score=0.340, inliers=2\n",
+      "   - Patch 3: normal=[   -0.11066   -0.013242    -0.99377], alignment_score=0.705, inliers=1\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -212,11 +209,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.0600724835163001x + 0.018846077267462256y + 0.9980160931046216z + -1.5888289076402247 = 0\n",
       "\n",
       " Detection 3 (class: small_box) - found 2 planar patches\n",
-      "   └─ Patch 0: normal=[    0.96798    0.074356    -0.23977], alignment_score=0.932, inliers=0\n",
-      "   └─ Patch 1: normal=[  -0.046991   -0.011113    -0.99883], alignment_score=0.756, inliers=0\n",
+      "   - Patch 0: normal=[    0.96798    0.074356    -0.23977], alignment_score=0.932, inliers=0\n",
+      "   - Patch 1: normal=[  -0.046991   -0.011113    -0.99883], alignment_score=0.756, inliers=0\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -234,12 +230,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.07618845333306654x + 0.04732490589047708y + 0.9959697148313159z + -1.68811666642643 = 0\n",
       "\n",
       " Detection 4 (class: medium_box) - found 3 planar patches\n",
-      "   └─ Patch 0: normal=[  -0.092319    -0.91945    -0.38222], alignment_score=1.239, inliers=2\n",
-      "   └─ Patch 1: normal=[   0.018419    -0.97269    -0.23139], alignment_score=1.282, inliers=0\n",
-      "   └─ Patch 2: normal=[  -0.092983   -0.077526    -0.99264], alignment_score=0.910, inliers=1\n",
+      "   - Patch 0: normal=[  -0.092319    -0.91945    -0.38222], alignment_score=1.239, inliers=2\n",
+      "   - Patch 1: normal=[   0.018419    -0.97269    -0.23139], alignment_score=1.282, inliers=0\n",
+      "   - Patch 2: normal=[  -0.092983   -0.077526    -0.99264], alignment_score=0.910, inliers=1\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -257,12 +252,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.06066643481718971x + 0.06959219589211396y + 0.9957291348341102z + -1.7013227316932176 = 0\n",
       "\n",
       " Detection 5 (class: small_box) - found 3 planar patches\n",
-      "   └─ Patch 0: normal=[    0.69735    -0.17037    -0.69618], alignment_score=0.738, inliers=2\n",
-      "   └─ Patch 1: normal=[   0.037699     -0.9539    -0.29776], alignment_score=1.546, inliers=0\n",
-      "   └─ Patch 2: normal=[-0.00068744    -0.23009    -0.97317], alignment_score=0.640, inliers=2\n",
+      "   - Patch 0: normal=[    0.69735    -0.17037    -0.69618], alignment_score=0.738, inliers=2\n",
+      "   - Patch 1: normal=[   0.037699     -0.9539    -0.29776], alignment_score=1.546, inliers=0\n",
+      "   - Patch 2: normal=[-0.00068744    -0.23009    -0.97317], alignment_score=0.640, inliers=2\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -280,10 +274,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.05775849205476669x + 0.04177008144927845y + 0.9974563734275701z + -1.5944452162867158 = 0\n",
       "\n",
       " Detection 6 (class: small_box) - found 1 planar patches\n",
-      "   └─ Patch 0: normal=[  -0.047433   -0.094897    -0.99436], alignment_score=0.702, inliers=3\n",
+      "   - Patch 0: normal=[  -0.047433   -0.094897    -0.99436], alignment_score=0.702, inliers=3\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -301,10 +294,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.08326592994473789x + 0.03498472450075322y + 0.9959130755051088z + -1.5905407789790649 = 0\n",
       "\n",
       " Detection 7 (class: small_box) - found 1 planar patches\n",
-      "   └─ Patch 0: normal=[  -0.059461   -0.068321    -0.99589], alignment_score=0.713, inliers=0\n",
+      "   - Patch 0: normal=[  -0.059461   -0.068321    -0.99589], alignment_score=0.713, inliers=0\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -322,13 +314,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.0005401228890378884x + 0.11456754759696679y + 0.9934153136049804z + -1.6802341328582469 = 0\n",
       "\n",
       " Detection 8 (class: small_box) - found 4 planar patches\n",
-      "   └─ Patch 0: normal=[   0.082988    -0.99202   -0.094941], alignment_score=0.957, inliers=4\n",
-      "   └─ Patch 1: normal=[   0.058534    -0.99092    -0.12106], alignment_score=1.004, inliers=5\n",
-      "   └─ Patch 2: normal=[     0.4083    -0.89088    -0.19905], alignment_score=0.901, inliers=0\n",
-      "   └─ Patch 3: normal=[  -0.015607    -0.09706    -0.99516], alignment_score=0.732, inliers=1\n",
+      "   - Patch 0: normal=[   0.082988    -0.99202   -0.094941], alignment_score=0.957, inliers=4\n",
+      "   - Patch 1: normal=[   0.058534    -0.99092    -0.12106], alignment_score=1.004, inliers=5\n",
+      "   - Patch 2: normal=[     0.4083    -0.89088    -0.19905], alignment_score=0.901, inliers=0\n",
+      "   - Patch 3: normal=[  -0.015607    -0.09706    -0.99516], alignment_score=0.732, inliers=1\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -346,12 +337,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plane equation: 0.0016433791953896623x + 0.11044971537296908y + 0.9938803548108043z + -1.6809332647068937 = 0\n",
       "\n",
       " Detection 9 (class: medium_box) - found 3 planar patches\n",
-      "   └─ Patch 0: normal=[   0.065173    -0.99253    -0.10315], alignment_score=1.274, inliers=2\n",
-      "   └─ Patch 1: normal=[    0.40729    -0.89124    -0.19952], alignment_score=1.019, inliers=2\n",
-      "   └─ Patch 2: normal=[  -0.011365    -0.11337    -0.99349], alignment_score=0.380, inliers=0\n",
+      "   - Patch 0: normal=[   0.065173    -0.99253    -0.10315], alignment_score=1.274, inliers=2\n",
+      "   - Patch 1: normal=[    0.40729    -0.89124    -0.19952], alignment_score=1.019, inliers=2\n",
+      "   - Patch 2: normal=[  -0.011365    -0.11337    -0.99349], alignment_score=0.380, inliers=0\n",
       "No valid patches left after filtering (small planes).\n"
      ]
     },
@@ -374,6 +364,7 @@
     "\n",
     "# run planar patch detector\n",
     "planar_detector = PlanarPatchDetector(\n",
+    "    color_img=color_image,\n",
     "    depth_img=depth_image,\n",
     "    intrinsics=camera_intrinsics,\n",
     "    known_dims=known_dims\n",
@@ -412,21 +403,42 @@
     "# planar_detector.process_all(visualize=False, visualize_individual=False)\n",
     "\n",
     "results = planar_detector.get_results()\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "62a6bc19",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(PointCloud with 1235 points., [OrientedBoundingBox: center: (0.160384, 0.450404, 1.57444), extent: 0.283093, 0.194692, 0.025689), OrientedBoundingBox: center: (0.3244, 0.483542, 1.62394), extent: 0.286239, 0.149914, 0.022575)]), (PointCloud with 1454 points., [OrientedBoundingBox: center: (0.782348, 0.364049, 1.97014), extent: 0.254029, 0.0663199, 0.0232767), OrientedBoundingBox: center: (0.454092, 0.274754, 1.56009), extent: 0.233066, 0.310202, 0.0834065)]), (PointCloud with 1569 points., [OrientedBoundingBox: center: (0.370874, 0.658496, 1.83844), extent: 0.0673201, 0.119123, 0.00674455), OrientedBoundingBox: center: (0.322008, 0.469587, 1.61688), extent: 0.16188, 0.122949, 0.0147314), OrientedBoundingBox: center: (0.79862, 0.60367, 1.95498), extent: 0.251892, 0.0826176, 0.0305882), OrientedBoundingBox: center: (0.471895, 0.473957, 1.54259), extent: 0.29489, 0.201351, 0.165433)]), (PointCloud with 1056 points., [OrientedBoundingBox: center: (-0.251122, 0.426262, 1.55587), extent: 0.181993, 0.0804128, 0.00639876), OrientedBoundingBox: center: (-0.0896495, 0.442882, 1.58941), extent: 0.311055, 0.206297, 0.0405912)]), (PointCloud with 1046 points., [OrientedBoundingBox: center: (-0.0188673, -0.0474856, 1.93066), extent: 0.0959138, 0.255994, 0.0265366), OrientedBoundingBox: center: (-0.0235295, 0.213387, 1.6406), extent: 0.101686, 0.199637, 0.0244072), OrientedBoundingBox: center: (-0.0231989, 0.0999322, 1.69211), extent: 0.203719, 0.212856, 0.0239957)]), (PointCloud with 1511 points., [OrientedBoundingBox: center: (0.700903, 0.132041, 1.93111), extent: 0.211156, 0.174633, 0.0387026), OrientedBoundingBox: center: (0.471673, 0.0487441, 1.77452), extent: 0.229659, 0.312355, 0.0349502), OrientedBoundingBox: center: (0.453683, 0.156958, 1.67135), extent: 0.313664, 0.16629, 0.0772443)]), (PointCloud with 894 points., [OrientedBoundingBox: center: (0.186571, 0.296127, 1.57831), extent: 0.321221, 0.184318, 0.0336779)]), (PointCloud with 809 points., [OrientedBoundingBox: center: (-0.0750724, 0.285686, 1.59417), extent: 0.310373, 0.194045, 0.0241685)]), (PointCloud with 1158 points., [OrientedBoundingBox: center: (0.248747, 0.210076, 1.63663), extent: 0.114017, 0.0388659, 0.00157775), OrientedBoundingBox: center: (0.165233, 0.206645, 1.62744), extent: 0.152796, 0.0693325, 0.0013649), OrientedBoundingBox: center: (0.345894, 0.0423151, 1.78434), extent: 0.0501364, 0.169345, 0.00514493), OrientedBoundingBox: center: (0.19784, 0.120279, 1.68093), extent: 0.195216, 0.31672, 0.0265083)]), (PointCloud with 1111 points., [OrientedBoundingBox: center: (0.200671, 0.209012, 1.6393), extent: 0.227235, 0.0656846, 0.00177584), OrientedBoundingBox: center: (0.347366, 0.042184, 1.78299), extent: 0.0503616, 0.17154, 0.00499138), OrientedBoundingBox: center: (0.19948, 0.12213, 1.68032), extent: 0.20054, 0.320517, 0.0314511)])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0f6f9727",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "planar_detector.visualize_colored_surfaces()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f6f9727",
+   "id": "5da75bd3",
    "metadata": {},
    "outputs": [],
    "source": []
